# esqueleto-textsearch

./: .gitignore  LICENSE  README.md  esqueleto-textsearch.cabal
src/Database/Esqueleto/: TextSearch.hs
src/Database/Esqueleto/TextSearch/: Language.hs  Sql.hs  Types.hs
test/Database/Esqueleto/: TextSearchSpec.hs
